--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -1,28 +1,43 @@
 .custom-button {
-    min-width: 150px;
-    width: auto;
-    height: 50px;
-    line-height: 50px;
-    padding: 0 35px 0 35px;
-    font-size: 13px;
-    background-color: black;
-    color: white;
-    text-transform: uppercase;
-    border: none;
-    cursor: pointer;
-  
+  min-width: 150px;
+  width: auto;
+  height: 50px;
+  line-height: 50px;
+  padding: 0 35px 0 35px;
+  font-size: 13px;
+  background-color: black;
+  color: white;
+  text-transform: uppercase;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+
+  &:hover {
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+  }
+
+  &.google-sign-in {
+    background-color: #4285f4;
+    color: #fff;
+
     &:hover {
-      background-color: white;
-      color: black;
-      border: 1px solid black;
-    }
-    &.google-sign-in {
-      background-color: #4285f4;
-      color: #fff;
-      &:hover {
-        background-color: #357ae8;
-        border: none;
-      }
+      background-color: #357ae8;
+      border: none;
     }
   }
-  
+
+  &.inverted {
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+
+    &:hover {
+      background-color: black;
+      color: white;
+      bottom: none;
+    }
+  }
+}
